--- a/README
+++ b/README
@@ -2,6 +2,9 @@ librtlsdr
 ===========
 This is a fork of https://github.com/steve-m/librtlsdr with project files for a native compilation in Microsoft Visual Studio (verified with VS 2015), Win64. See release section for pre-compiled binaries.
 
+You might need to grab the Visual C++ Redistributable for Visual Studio 2015
+https://www.microsoft.com/en-us/download/details.aspx?id=53587
+
 See the vs15 folder for compilation instructions.
 
 Original readme from https://github.com/steve-m/librtlsdr:
